@@ -1,6 +1,9 @@
 dh-make-perl (0.64) UNRELEASED; urgency=low
 
   * DhMakePerl: drop unused extract_changelog()
+  * DhMakePerl: fix_rules() replaced with update_file_list() for updating
+    examples and docs and checks for deprecated/obsolete entries in
+    DhMakePerl::Config
 
  -- Damyan Ivanov <dmn@debian.org>  Fri, 05 Feb 2010 09:05:25 +0200
 
